--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@
 DATABASE_URL="mongodb+srv://hkad1016:o1teRXYnRGiM4FEE@cluster0.mpx8wu5.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=5f84034db400aa335cde
+GITHUB_SECRET=1449af8ed00c05dd7cf58d68bdc0b05f52fb20f6
 
 GOOGLE_CLIENT_ID=985654027420-sl5458npa5akpj9h30ohmgmcf05gej52.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
